<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/start_menu_text1"
            android:textSize="@dimen/textsize_large"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/start_menu_text2"
            android:textSize="@dimen/textsize_small"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_reload"
                android:text="reload"
                android:textSize="@dimen/textsize_medium"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/select_button"
                android:text="OK"
                android:textSize="@dimen/textsize_medium"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_dummy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
                <ImageView
                    android:id="@+id/pc_img"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false">

                <RadioGroup
                    android:id="@+id/RadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left">

                    <RadioButton
                        android:id="@+id/RadioButton1245"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1245">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1251"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1251">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1261"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1261">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1350"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1350">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1360"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1360">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1401"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1401">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1402"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1402">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1450"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1450">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1460"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1460">
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/RadioButton1470"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize_medium"
                        android:text="@string/select_rom_1470">
                    </RadioButton>
                </RadioGroup>

            </ScrollView>
        </FrameLayout>


    </LinearLayout>

</LinearLayout>